@@ -1,5 +1,6 @@
 0.06
 - Add version to pod_example script.
+- Comment problematic test.
 - Improve man page.
 
 0.05 (April 28, 2013)
